# ccexplorer

./: .gitignore  PROJECT.md  README.md  pyproject.toml
.github/workflows/: test.yml
ccexplorer/: __init__.py  __main__.py  cli.py  data.py  pricing.py  web.py
ccexplorer/templates/: all.html
tests/: test_cli.py  test_data.py  test_pricing.py  test_web.py
