[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccexplorer"
version = "0.0.1"
description = "Local-first Cost Explorer for Claude Code sessions -- slice your spend by tool, project, session, model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Mike Bailey" },
]
keywords = [
    "claude",
    "claude-code",
    "cost",
    "tokens",
    "observability",
    "ccusage",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
# Standard-library only for v1. Browser-side chart uses Chart.js from CDN.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
cce = "ccexplorer.cli:main"

[project.urls]
Homepage = "https://github.com/mbailey/ccexplorer"
Repository = "https://github.com/mbailey/ccexplorer"
Issues = "https://github.com/mbailey/ccexplorer/issues"

[tool.hatch.build.targets.wheel]
packages = ["ccexplorer"]

[tool.hatch.build.targets.sdist]
include = [
    "ccexplorer",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
